--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@headlessui/react": "^2.2.9",
     "@liquidglass/react": "^0.1.3",
     "@tailwindcss/vite": "^4.1.18",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
