--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.0",
     "@headlessui/react": "^2.2.9",
     "@liquidglass/react": "^0.1.3",
     "@tailwindcss/vite": "^4.1.18",
