feat: Update .gitignore

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9....
 # 省略時は「公開済みの最新1件」を自動表示
 # VITE_DEFAULT_SURVEY_ID=uuid-of-survey
 
-# 公開1件あるのに取れない → Supabase で RLS ポリシーを追加（src/api/survey.ts のコメント参照）
+# 取得できない → SELECT 用 RLS を追加（src/api/survey.ts のコメント参照）
+# 送信できない → survey_responses / survey_response_items に INSERT 用 RLS を追加（同上）
